@@ -8,6 +8,7 @@
     ADDED: import/export of keyboard shortcuts
     ADDED: mouse selection modes are back! thanks to heiner for doing the work
 
+    FIXED: couldn't sort case sensative on some systems (see KDE bug #40131)
     FIXED: resizing of the main window produces strange effencts
     FIXED: double dragging in Krusader and Konqueror selection modes
     FIXED: right click menu and user action ID turmoil    
